# EECS-466-Project

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  VoronoiDiagram.sln
VoronoiDiagram/: VoronoiDiagram.vcxproj  VoronoiDiagram.vcxproj.filters  animated_voronoi_diagram.cpp  animated_voronoi_diagram.h  beachline_node.cpp  beachline_node.h  edge.h  event.h  main.cpp  point.h  voronoi_diagram.cpp  voronoi_diagram.h
libraries/powercrust/: CMakeLists.txt  DOC  Makefile  README  ndefs.h  powershape.C  setNormals.C
linux/src/: glut_example.cpp~
meshes/: gourd.xyz  vp.mtl
scripts/: collect_perfect_sampling_data.sh
src/: VoronoiDiagram.sln  glut_example.cpp  mesh_sample_viewer.cpp  mesh_sampler.cpp  mesh_sampler_utils.cpp  mesh_sampler_utils.h  mesh_samples_to_pcd.cpp  terrain_mesh_reconstruction.cpp  voronoi_and_delaunay.cpp
src/cgal/: array_convex_hull_2.cpp  delaunay_surface.cpp
src/cgal_examples/: delaunay_surface.cpp
src/mesh_comparison/: hausdorf_mesh_vertices.cpp
src/mesh_samplers/: mesh_sampler_utils.cpp  mesh_sampler_utils.h  mesh_surface_sampler.cpp  mesh_triangle_sampler.cpp
src/pcl_reconstruction/: mesh_samples_to_pcd.cpp  pcl_greedy_triangulation.cpp  pcl_marching_cubes.cpp  pcl_poisson.cpp
src/voronoi_diagram/: VoronoiDiagram.vcxproj.filters  animated_voronoi_diagram.cpp  animated_voronoi_diagram.h  beachline_node.h  edge.h  main.cpp  point.h  voronoi_and_delaunay.cpp  voronoi_diagram.cpp
terrain_data/: downsampled_clevel.xyz  test.xyz
